set(TARGET_NAME wc)
add_library(${TARGET_NAME}
    src/Str.cpp
    src/big5.cpp
    src/ces_info.cpp
    src/char_conv.cpp
    src/charset.cpp
    src/combining.cpp
    src/conv.cpp
    src/detect.cpp
    src/gb18030.cpp
    src/gbk.cpp
    src/hkscs.cpp
    src/hz.cpp
    src/iso2022.cpp
    src/jis.cpp
    src/johab.cpp
    src/priv.cpp
    src/putc.cpp
    src/search.cpp
    src/sjis.cpp
    src/status.cpp
    src/ucs.cpp
    src/uhc.cpp
    src/utf7.cpp
    src/utf8.cpp
    src/viet.cpp
    src/wtf.cpp
)
target_include_directories(${TARGET_NAME}
PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/src
PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/include
)   
target_link_libraries(${TARGET_NAME}
PUBLIC
    charutil
    gc
)
